# systeminfor

./: CMakeLists.txt  appveyor.yml
.github/workflows/: cmake.yml  msbuild.yml
KSystemInformer/: CMakeLists.txt  KSystemInformer.inf  comms_handlers.c  conquer_hooks.c  conquer_stealth.c  process.c  protection.c  resource.rc  vm.c
KSystemInformer/include/: kph.h
SystemInformer/: CMakeLists.txt  SystemInformer.rc  ksisup.c  main.c  notifico.c  notiftoast.cpp  options.c  runas.c  settings.c  version.rc
kphlib/include/: kphmsg.h  kphmsgdefs.h
phlib/: json.c  kph.c  native.c  theme.c
phlib/include/: kphuser.h  phbase.h  ref.h
tools/CustomBuildTool/: DynData.cs
tools/CustomSetupTool/: util.c
